# whisper-mlx-realtime-note

./: .gitignore  REACT_SETUP.md  README.md  main.py  pyproject.toml  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.tsx  CodeMirror.css  CodeMirrorEditor.tsx  TranscribeProvider.ts  VADManager.tsx  index.css
static/: index.css
templates/: index.html
